[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/male/base/base_male.png" type="Texture" id=1]
[ext_resource path="res://theme/fonts/the_bold_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprites/female/base/base_female.png" type="Texture" id=3]
[ext_resource path="res://theme/images/background.png" type="Texture" id=4]
[ext_resource path="res://theme/resources/loudeyes.tres" type="Theme" id=6]
[ext_resource path="res://scenes_scripts/CreditsPop.gd" type="Script" id=7]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 960.0
margin_bottom = 640.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Divider" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprites" type="Control" parent="Divider"]
margin_right = 500.0
margin_bottom = 640.0
rect_min_size = Vector2( 500, 640 )

[node name="Female" type="Control" parent="Divider/Sprites"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HairsBehind" type="TextureRect" parent="Divider/Sprites/Female"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="TextureRect" parent="Divider/Sprites/Female"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blushes" type="TextureRect" parent="Divider/Sprites/Female"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Costumes" type="TextureRect" parent="Divider/Sprites/Female"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HairsFront" type="TextureRect" parent="Divider/Sprites/Female"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Expressions" type="TextureRect" parent="Divider/Sprites/Female"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Glasses" type="TextureRect" parent="Divider/Sprites/Female"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choker" type="TextureRect" parent="Divider/Sprites/Female"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flower" type="TextureRect" parent="Divider/Sprites/Female"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Male" type="Control" parent="Divider/Sprites"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HairsBehind" type="TextureRect" parent="Divider/Sprites/Male"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="TextureRect" parent="Divider/Sprites/Male"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadphonesBase" type="TextureRect" parent="Divider/Sprites/Male"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Costumes" type="TextureRect" parent="Divider/Sprites/Male"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HairsFront" type="TextureRect" parent="Divider/Sprites/Male"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Expressions" type="TextureRect" parent="Divider/Sprites/Male"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Glasses" type="TextureRect" parent="Divider/Sprites/Male"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EyeCover" type="TextureRect" parent="Divider/Sprites/Male"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadphonesUp" type="TextureRect" parent="Divider/Sprites/Male"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sweatdrop" type="TextureRect" parent="Divider/Sprites/Male"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="Divider"]
margin_left = 504.0
margin_right = 934.0
margin_bottom = 640.0
custom_constants/separation = 8
alignment = 1

[node name="GenderOptions" type="OptionButton" parent="Divider/Options"]
margin_top = 10.0
margin_right = 430.0
margin_bottom = 75.0
mouse_default_cursor_shape = 2
text = "Gender Options"

[node name="ItemOptions" type="MarginContainer" parent="Divider/Options"]
margin_top = 83.0
margin_right = 430.0
margin_bottom = 148.0

[node name="Female" type="OptionButton" parent="Divider/Options/ItemOptions"]
margin_right = 430.0
margin_bottom = 65.0
mouse_default_cursor_shape = 2
text = "Item Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Male" type="OptionButton" parent="Divider/Options/ItemOptions"]
visible = false
margin_right = 430.0
margin_bottom = 65.0
mouse_default_cursor_shape = 2
text = "Item Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemPanel" type="Panel" parent="Divider/Options"]
margin_top = 156.0
margin_right = 430.0
margin_bottom = 556.0
rect_min_size = Vector2( 430, 400 )

[node name="Female" type="Control" parent="Divider/Options/ItemPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Male" type="Control" parent="Divider/Options/ItemPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Divider/Options"]
margin_top = 564.0
margin_right = 430.0
margin_bottom = 629.0

[node name="Clear" type="Button" parent="Divider/Options/HBoxContainer"]
margin_right = 108.0
margin_bottom = 65.0
mouse_default_cursor_shape = 2
text = "Clear All"

[node name="Save" type="Button" parent="Divider/Options/HBoxContainer"]
margin_left = 112.0
margin_right = 259.0
margin_bottom = 65.0
mouse_default_cursor_shape = 2
text = "Save Image"

[node name="Credits" type="Button" parent="Divider/Options/HBoxContainer"]
margin_left = 263.0
margin_right = 430.0
margin_bottom = 65.0
mouse_default_cursor_shape = 2
text = "Credits & Info"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 768.0
margin_bottom = 512.0
rect_min_size = Vector2( 768, 512 )
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/Users/falli/OneDrive/Documents/My Documents/My Godot/Sutemo"
current_path = "/Users/falli/OneDrive/Documents/My Documents/My Godot/Sutemo/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsPop" type="PopupPanel" parent="."]
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CreditsPop"]
margin_left = 10.0
margin_top = 10.0
margin_right = 840.0
margin_bottom = 462.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoContainer" type="VBoxContainer" parent="CreditsPop/HBoxContainer"]
margin_right = 400.0
margin_bottom = 452.0
alignment = 1

[node name="Info" type="Label" parent="CreditsPop/HBoxContainer/InfoContainer"]
margin_right = 400.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 2 )
text = "Info"
align = 1

[node name="UseInfo" type="RichTextLabel" parent="CreditsPop/HBoxContainer/InfoContainer"]
margin_top = 32.0
margin_right = 400.0
margin_bottom = 452.0
rect_min_size = Vector2( 400, 420 )
bbcode_enabled = true
bbcode_text = "[b]Sutemo's asset use information:[/b]
[indent]This sprite can be used in personal or commercial projects. however you can't resell the sprite on its own.
Feel free to ask me if you have any questions or suggestion for my next project. or you can drop by to my deviant art page [url]https://www.deviantart.com/stereo-mono[/url]
You can also support me here [url]https://ko-fi.com/sutemo[/url]
Thank you.[/indent]"
text = "Sutemo's asset use information:
	This sprite can be used in personal or commercial projects. however you can't resell the sprite on its own.
Feel free to ask me if you have any questions or suggestion for my next project. or you can drop by to my deviant art page https://www.deviantart.com/stereo-mono
You can also support me here https://ko-fi.com/sutemo
Thank you."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsContainer" type="VBoxContainer" parent="CreditsPop/HBoxContainer"]
margin_left = 430.0
margin_right = 830.0
margin_bottom = 452.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="CreditsPop/HBoxContainer/CreditsContainer"]
margin_top = 4.0
margin_right = 400.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "Credits"
align = 1

[node name="People" type="Label" parent="CreditsPop/HBoxContainer/CreditsContainer"]
margin_top = 42.0
margin_right = 400.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 2 )
text = "People"

[node name="Links" type="RichTextLabel" parent="CreditsPop/HBoxContainer/CreditsContainer"]
margin_top = 80.0
margin_right = 400.0
margin_bottom = 230.0
rect_min_size = Vector2( 400, 150 )
bbcode_enabled = true
bbcode_text = "[url=https://sutemo.itch.io/female-character]Sprite[/url] [url=https://sutemo.itch.io/male-character-sprite-for-visual-novel]Artwork[/url] - [url=https://sutemo.itch.io/]Sutemo[/url]
[url=https://loudeyes.itch.io/dating-sim-ui-pack]GUI Artwork[/url] -[url=https://loudeyes.itch.io/]Lynda Mc Donald[/url]
[url=https://emily2.itch.io/sutemos-character-creator]Programming[/url] - [url=https://emily2.itch.io/]Emily Yi[/url]
[url=https://github.com/Pukkah/HTML5-File-Exchange-for-Godot]HTML5 File Exchange for Godot[/url] - [url=https://github.com/Pukkah]laame[/url]"
text = "Sprite Artwork - Sutemo
GUI Artwork -Lynda Mc Donald
Programming - Emily Yi
HTML5 File Exchange for Godot - laame"

[node name="Programs" type="Label" parent="CreditsPop/HBoxContainer/CreditsContainer"]
margin_top = 240.0
margin_right = 400.0
margin_bottom = 268.0
custom_fonts/font = ExtResource( 2 )
text = "Programs"

[node name="ProgramDesc" type="Label" parent="CreditsPop/HBoxContainer/CreditsContainer"]
margin_top = 278.0
margin_right = 400.0
margin_bottom = 339.0
text = "Krita
Godot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fonts" type="Label" parent="CreditsPop/HBoxContainer/CreditsContainer"]
margin_top = 349.0
margin_right = 400.0
margin_bottom = 377.0
custom_fonts/font = ExtResource( 2 )
text = "Fonts"

[node name="FontsDesc" type="Label" parent="CreditsPop/HBoxContainer/CreditsContainer"]
margin_top = 387.0
margin_right = 400.0
margin_bottom = 448.0
text = "The Bold Font
Roboto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitPop" type="PopupPanel" parent="."]
margin_right = 500.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitLabel" type="Label" parent="WaitPop"]
margin_left = 10.0
margin_top = 10.0
margin_right = 490.0
margin_bottom = 190.0
text = "Generating image..."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
